--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>coronavirus-map</title>
+    <style>
+      .loading-box {
+        position: fixed;
+        width: 100%;
+        text-align: center;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      .loading {
+        font-size: 14px;
+        letter-spacing: 2px;
+        color: #ccc;
+      }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but coronavirus-map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div class='loading-box'>
+        <img src="assets/loading.gif" alt="loading">
+        <span class='loading'>Loading...</span>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
